# Monolithic_income_and_expense_traccker

./: README.md  requirements.txt  vercel.json
expense_tracker/: build_files.sh  data.json  db.sqlite3  pyproject.toml  requirement.txt  requirements.txt  settings.py  urls.py  vercel.json  wsgi.py
expense_tracker/expense_tracker/: .env  requirements copy.txt  requirements.txt  settings.py  urls.py  wsgi.py
expense_tracker/new_venv/: pyvenv.cfg
expense_tracker/new_venv/Scripts/: activate  activate.bat
expense_tracker/users/: adminviews.py  apiexpenseview.py  apiincomeviews.py  expenseview.py  income.py  models.py  serializers.py  urls.py
expense_tracker/users/migrations/: 0001_initial.py  0003_expensecategorylimit.py
expense_tracker/users/templates/: add_expense.html  base1.html  edit_user.html  home1.html  manage_users.html  report.html  set_limits.html  signup.html  user_expenses_graph.html  user_report.html  view_expenses.html
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
users/: apiadminviews.py  apiuserviews.py  forms.py  urls.py  userviews.py
users/migrations/: 0002_income.py  0004_delete_expensecategorylimit.py  0005_expensecategorylimit.py
users/templates/: add_income.html  base.html  delete_user.html  edit_expense.html  edit_income.html  home.html  login.html  password_reset.html  view_incomes.html
