[project]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Web_page",email = "abdulnabi9257@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.8.1)",
    "binary (==1.0.1)",
    "certifi (==2024.12.14)",
    "charset-normalizer (==3.4.1)",
    "dj-database-url (==2.3.0)",
    "django (==5.1.4)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.3.1)",
    "gunicorn (==23.0.0)",
    "idna (==3.10)",
    "packaging (==24.2)",
    "plotly (==5.24.1)",
    "psycopg2 (==2.9.10)",
    "pyjwt (==2.10.1)",
    "requests (==2.32.3)",
    "sqlparse (==0.5.3)",
    "tenacity (==9.0.0)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "urllib3 (==2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
